--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,4 @@ _site/news/業界/2021/08/09/001.html
 _site/news/資訊管理學會/2023/11/13/001.html
 _site/news/資訊管理學會/2023/12/09/001.html
 _site/news/資訊管理學會/2024/03/14/001.html
+Gemfile.lock
