--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ pagination:
   per_page: 5
 
   # The permalink structure for the paginated pages (this can be any level deep)
-  permalink: "/news/:num/" # Pages are index.html inside this folder (default)
+  permalink: "/:num/" # Pages are index.html inside this folder (default)
   #permalink: '/page/:num.html' # Pages are simple html files
   #permalink: '/page/:num' # Pages are html files, linked jekyll extensionless permalink style.
 
