update English page, update markdown settings, fix typo in membership page, and update TOC layout

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ title: 中華民國資訊管理學會 # 目前無用
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
+markdown: kramdown
+
 # Build settings
 plugins:
   - jekyll-feed
